# BTD_Ass2

./: .gitignore  NopNop.cpp  main.cpp  sdkconfig  server2.py
screen/: CMakeLists.txt  sdkconfig  sdkconfig.old
screen/main/: CMakeLists.txt  display.c  display.h  main.c  mpu6866controller.c  mpu6866controller.h  tcp_client_v4.c  tcp_client_v4.h
